# ic-dns-oracle

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
.github/workflows/: tests.yaml
src/dns_client/: Cargo.toml  dns_client.did
src/dns_client/src/: lib.rs
src/ic_dns_oracle_backend/: Cargo.toml  ic_dns_oracle_backend.did
src/ic_dns_oracle_backend/src/: lib.rs  utils.rs
src/ic_dns_oracle_frontend/src/: index.html  index.js
src/poseidon/: Cargo.toml  poseidon.did
src/poseidon/src/: lib.rs
