[package]
name = "dns_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.12.0"
serde = { version = "1.0.152", default-features = false }
serde_json = { version = "1.0.93", default-features = false }
# serde_bytes = { version = "0.11.9", default-features = false }
regex = { version = "1.9.6", default-features = false, features = ["std"] }
base64 = "0.21.4"
hex = { version = "0.4.3", default-features = false }
rsa = { version = "0.9.2", default-features = false }
# sha2 = { version = "0.10.6", default-features = false }
ic-evm-sign = { version = "0.1.4", git = "https://github.com/SoraSuegami/ic-evm-sign.git" }
ic-storage = { version = "0.13.0", git = "https://github.com/bitfinity-network/canister-sdk.git" }
# ic-exports = { version = "0.7.0", git = "https://github.com/bitfinity-network/canister-sdk.git" }
# ic-log = { version = "0.7.0", git = "https://github.com/bitfinity-network/canister-sdk.git" }
# log = "0.4.20"

[dev-dependencies]
ethers-core = "2.0.10"
easy-hasher = "2.2.1"
poseidon = { path = "../poseidon" }
