[package]
name = "ic_dns_oracle_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.0"
serde = "1.0.152"
serde_json = "1.0.93"
serde_bytes = "0.11.9"
regex = "1.9.6"
base64 = "0.21.4"
hex = "0.4.3"
rsa = { version = "0.9.2", default-features = false }
sha2 = "0.10.6"
ic-evm-sign = { version = "0.1.4", git = "https://github.com/SoraSuegami/ic-evm-sign.git" }

[dev-dependencies]
ethers-core = "2.0.10"
easy-hasher = "2.2.1"
poseidon = { path = "../poseidon" }
