[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.3"
ic-cdk = "0.12.1"
hex = "0.4.3"
# serde = "1.0.152"
# serde_json = "1.0.93"
# serde_bytes = "0.11.9"
poseidon-rs = { git = "https://github.com/SoraSuegami/poseidon-rs.git", version = "0.0.10", branch = "master", default-features = false }
ff = { version = "0.13.0", default-features = false }
getrandom = { version = "0.2", features = ["custom"] }
# poseidon_types = { path = "../poseidon_types" }
